syntax = "proto3";

package confidence.flags.resolver.v1;

option go_package = "github.com/spotify/confidence-resolver-rust/mock-support-server/genproto/mock;mockpb";

import "google/api/annotations.proto";


service InternalFlagLoggerService {
  // Writes flag assignment events and resolve logs together.
  rpc ClientWriteFlagLogs(WriteFlagLogsRequest) returns (WriteFlagLogsResponse){
    option (google.api.http) = {
      post: "/v1/clientFlagLogs:write"
      body: "*"
    };
  }

}

// The service that allows to report flag assigned and other client-side flag
// operations, useful when the resolve engine runs on the customer's premises
// (e.g. side-car)
message WriteFlagLogsRequest {
  repeated bytes flag_assigned = 1;

  // TelemetryData telemetry_data = 2;

  repeated bytes client_resolve_info = 3;
  repeated bytes flag_resolve_info = 4;
}

message WriteFlagLogsResponse {}

