package confidence

import (
	"context"
	"log/slog"
	"os"
	"sync"
	"sync/atomic"
	"testing"
	"time"

	"github.com/open-feature/go-sdk/openfeature"
	fl "github.com/spotify/confidence-resolver/openfeature-provider/go/confidence/internal/flag_logger"
	lr "github.com/spotify/confidence-resolver/openfeature-provider/go/confidence/internal/local_resolver"
	tu "github.com/spotify/confidence-resolver/openfeature-provider/go/confidence/internal/testutil"
	resolverv1 "github.com/spotify/confidence-resolver/openfeature-provider/go/confidence/proto/confidence/flags/resolverinternal"
	"google.golang.org/grpc"
)

// mockStateProvider provides test state for integration testing
type mockStateProvider struct {
	state     []byte
	accountID string
}

func (m *mockStateProvider) Provide(ctx context.Context) ([]byte, string, error) {
	accountID := m.accountID
	if accountID == "" {
		accountID = "test-account"
	}
	return m.state, accountID, nil
}

// trackingFlagLogger wraps a real GrpcWasmFlagLogger with a mocked connection
type trackingFlagLogger struct {
	actualLogger   FlagLogger
	logsSentCount  int32
	shutdownCalled bool
	mu             sync.Mutex
	// Track when async operations complete
	lastWriteCompleted chan struct{}
}

func (t *trackingFlagLogger) Write(request *resolverv1.WriteFlagLogsRequest) {
	atomic.AddInt32(&t.logsSentCount, int32(len(request.FlagAssigned)))
	t.actualLogger.Write(request)
}

func (t *trackingFlagLogger) Shutdown() {
	t.mu.Lock()
	t.shutdownCalled = true
	t.mu.Unlock()
	t.actualLogger.Shutdown()
}

func (t *trackingFlagLogger) GetLogsSentCount() int32 {
	return atomic.LoadInt32(&t.logsSentCount)
}

func (t *trackingFlagLogger) WasShutdownCalled() bool {
	t.mu.Lock()
	defer t.mu.Unlock()
	return t.shutdownCalled
}

// mockGrpcStubForIntegration provides a mock gRPC stub that tracks async operations
type mockGrpcStubForIntegration struct {
	resolverv1.InternalFlagLoggerServiceClient
	callsReceived  int32
	onCallReceived chan struct{}
}

func (m *mockGrpcStubForIntegration) ClientWriteFlagLogs(ctx context.Context, req *resolverv1.WriteFlagLogsRequest, opts ...grpc.CallOption) (*resolverv1.WriteFlagLogsResponse, error) {
	atomic.AddInt32(&m.callsReceived, 1)
	// Signal that a call was received
	select {
	case m.onCallReceived <- struct{}{}:
	default:
	}
	// Simulate some processing time to verify shutdown waits for completion
	time.Sleep(50 * time.Millisecond)
	return &resolverv1.WriteFlagLogsResponse{}, nil
}

func (m *mockGrpcStubForIntegration) GetCallsReceived() int32 {
	return atomic.LoadInt32(&m.callsReceived)
}

// TestIntegration_OpenFeatureShutdownFlushesLogs tests the full integration:
// - Real OpenFeature SDK
// - Real provider with all components
// - Mock state provider (using test state)
// - Actual GrpcWasmFlagLogger with mocked gRPC connection
// - Verifies logs are flushed and gRPC calls complete on openfeature.Shutdown()
// This test specifically verifies the shutdown bug fix where the GrpcWasmFlagLogger's
// async goroutines complete before Shutdown() returns, ensuring no data loss.
func TestIntegration_OpenFeatureShutdownFlushesLogs(t *testing.T) {
	// Load test state
	testState := tu.LoadTestResolverState(t)
	accountID := tu.LoadTestAccountID(t)

	ctx := context.Background()

	// Create mock state provider
	stateProvider := &mockStateProvider{
		state: testState,
	}

	// Create tracking logger with actual GrpcWasmFlagLogger and mocked connection
	mockStub := &mockGrpcStubForIntegration{
		onCallReceived: make(chan struct{}, 100), // Buffer to prevent blocking
	}
	actualGrpcLogger := fl.NewGrpcWasmFlagLogger(mockStub, "test-client-secret", slog.New(slog.NewTextHandler(os.Stderr, nil)))

	trackingLogger := &trackingFlagLogger{
		actualLogger:       actualGrpcLogger,
		lastWriteCompleted: make(chan struct{}, 1),
	}

	// Create provider with test state
	provider, err := createProviderWithTestState(ctx, stateProvider, accountID, trackingLogger)
	if err != nil {
		t.Fatalf("Failed to create provider: %v", err)
	}

	client := openfeature.NewClient("integration-test")

	state := client.State()
	if state != "NOT_READY" {
		t.Fatalf("Expected client state to be NOT_READY before initialization, was %+v", state)
	}
	// Register with OpenFeature
	err = openfeature.SetProviderAndWait(provider)
	if err != nil {
		t.Fatalf("Failed to set provider: %v", err)
	}

	evalCtx := openfeature.NewEvaluationContext(
		"tutorial_visitor",
		map[string]interface{}{
			"visitor_id": "tutorial_visitor",
		},
	)

	state = client.State()
	if state != "READY" {
		t.Fatalf("Expected client state to be READY after initialization, was %+v", state)
	}

	// Evaluate the tutorial-feature flag (this should generate logs)
	// This flag exists in the test state and should resolve successfully
	numEvaluations := 5
	for i := 0; i < numEvaluations; i++ {
		result, _ := client.ObjectValueDetails(ctx, "tutorial-feature", map[string]interface{}{}, evalCtx)
		if i == 0 {
			t.Logf("First evaluation result: %+v", result)
		}
	}

	// Now shutdown - this should flush all logs
	openfeature.Shutdown()

	// Verify shutdown was called
	if !trackingLogger.WasShutdownCalled() {
		t.Error("Expected logger shutdown to be called")
	}

	// Verify logs were flushed
	finalLogCount := trackingLogger.GetLogsSentCount()
	if finalLogCount == 0 {
		t.Error("Expected logs to be flushed during shutdown, but no logs were sent")
	}

	// Verify that the mock gRPC connection actually received the calls
	// This proves that the connection completed before shutdown returned
	grpcCallsReceived := mockStub.GetCallsReceived()
	if grpcCallsReceived == 0 {
		t.Error("Expected mock gRPC connection to receive calls, but none were received")
	}

	t.Logf("Successfully flushed %d log entries via %d gRPC calls during shutdown", finalLogCount, grpcCallsReceived)
}

// createProviderWithTestState creates a provider with mock state provider and tracking logger
func createProviderWithTestState(
	ctx context.Context,
	stateProvider StateProvider,
	accountID string,
	logger FlagLogger,
) (*LocalResolverProvider, error) {
	unsupportedMatStore := NewUnsupportedMaterializationStore()
	resolverSupplier := wrapResolverSupplierWithMaterializations(lr.NewLocalResolver, unsupportedMatStore)
	// Create provider with the client secret from test state
	// The test state includes client secret: mkjJruAATQWjeY7foFIWfVAcBWnci2YF
	provider := NewLocalResolverProvider(resolverSupplier, stateProvider, logger, "mkjJruAATQWjeY7foFIWfVAcBWnci2YF", slog.New(slog.NewTextHandler(os.Stderr, nil)))
	return provider, nil
}
